# AzureKeyVaultManagedHSMEngine

./: .gitignore  CLAUDE.md  CMakeLists.nix.patch  default.nix  flake.nix  package.nix  shell.nix  test_akv_engine.sh
src/: CMakeLists.txt  curl.c  dllmain.c  e_akv_err.h  ec.c  key.c  openssl3_compat.h  pch.h  rsa.c
